syntax = "proto3";

package merkledb;

option java_package = "com.swirlds.merkledb.files";
option java_multiple_files = true;

message LeafRecord {

    // Virtual node path
    optional fixed64 path = 1;

    // Virtual key
    bytes key = 2;

    // Virtual value
    bytes value = 3;
}
